Corrección de codigo no usado

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
     <!-- MAIN -->
     <main>
-        <!-- <img src="./assets/minifreak-frontal-sm.png" alt="Minifreak frontal"> -->
         <div class="main-principal">
             <div class="imagen-minifreak">
                 <img class="main-imagen" src="./assets/minifreak-frontal-sm.png" alt="Minifreak frontal">
@@ -117,36 +116,38 @@
                     <li class="caracteristicas-item">256 slots para presets de usuario</li>
                 </ul>
             </section>
-
         </div>
-
-
     </main>
     <a href="./pages/contacto.html"><img class="suscripcion" src="./assets/sintetizador-fixed-sm.png"
             alt="Suscripción y contacto"></a>
-    <!-- <img class="suscripcion" src="./assets/sintetizador-fixed-sm.png" alt="Suscripción y contacto"> -->
-
     <!-- FOOTER -->
-    <footer> 
+    <footer>
         <div class="pie-de-pagina">
             <div class="derechos">
                 <h4>Pagina diseñada por Sebas.</h4>
                 <h4>Copyright © 2025 Sebastian L.</h4>
             </div>
             <div class="redes">
-                <a href="http://www.instagram.com" target="_blank"><h4>Instagram</h4></a>
-                <a href="http://www.facebook.com" target="_blank"><h4>Facebook</h4></a>
-                <a href="http://www.x.com" target="_blank"><h4>X</h4></a>
-                
+                <a href="http://www.instagram.com" target="_blank">
+                    <h4>Instagram</h4>
+                </a>
+                <a href="http://www.facebook.com" target="_blank">
+                    <h4>Facebook</h4>
+                </a>
+                <a href="http://www.x.com" target="_blank">
+                    <h4>X</h4>
+                </a>
             </div>
             <div class="enlaces">
-                <a href="http://www.arturia.com" target="_blank"><h4>Sitio oficial de Arturia</h4></a>
-                <a href="https://www.mercadolibre.com.ar/tienda/arturia#from=share_eshop" target="_blank"><h4>Arturia oficial en mercado libre</h4></a>
-                
+                <a href="http://www.arturia.com" target="_blank">
+                    <h4>Sitio oficial de Arturia</h4>
+                </a>
+                <a href="https://www.mercadolibre.com.ar/tienda/arturia#from=share_eshop" target="_blank">
+                    <h4>Arturia oficial en mercado libre</h4>
+                </a>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
