--- a/pages/news.html
+++ b/pages/news.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    
-<!-- HEADER -->
+
+    <!-- HEADER -->
     <header>
         <a href="../index.html"><img class="header__logo" src="../assets/minifreak-logo.png" alt="Logo"></a>
         <h1 class="header__titulo">MiniFreak | Sintetizador hibrido algorítmico</h1>
@@ -24,65 +24,64 @@
                 <li class="navbar-item"><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
-
     </header>
 
     <!-- MAIN -->
-    <main> 
+    <main>
 
         <div class="titulo-seccion">
             <h2>Sintetizadores y cajas de ritmo que complementan al Minifreak</h2>
         </div>
-
         <section class="nuevos-sintes">
             <div class="sinte-item">
                 <img class="sinte__imagen" src="../assets/circuitry-480.jpg" alt="Circuit Rhythm">
                 <h4 class="sinte__nombre">Circuit Rhythm</h4>
-                <p class="sinte_descripcion">Circuit Rhythm es un potente y versátil sampler y caja de ritmos independiente para el beatmaker moderno. Graba directamente en el hardware, luego esculpe, invierte, reproduce en bucle, remuestrea y reproduce cromáticamente, todo en la caja. Pruebala!</p>
+                <p class="sinte_descripcion">Circuit Rhythm es un potente y versátil sampler y caja de ritmos
+                    independiente para el beatmaker moderno. Graba directamente en el hardware, luego esculpe, invierte,
+                    reproduce en bucle, remuestrea y reproduce cromáticamente, todo en la caja. Pruebala!</p>
             </div>
-
             <div class="sinte-item">
                 <img class="sinte__imagen" src="../assets/DeepMind-480.jpg" alt="DeepMind">
                 <h4 class="sinte__nombre">DeepMind</h4>
-                <p class="sinte_descripcion">Con la creación de DEEPMIND 6, el sintetizador polifónico analógico definitivo de 6 voces es por fin una realidad. DEEPMIND 6 te permite evocar prácticamente cualquier sonido que puedas imaginar con una precisión y facilidad incomparables. Increible!</p>
+                <p class="sinte_descripcion">Con la creación de DEEPMIND 6, el sintetizador polifónico analógico
+                    definitivo de 6 voces es por fin una realidad. DEEPMIND 6 te permite evocar prácticamente cualquier
+                    sonido que puedas imaginar con una precisión y facilidad incomparables. Increible!</p>
             </div>
-
             <div class="sinte-item">
                 <img class="sinte__imagen" src="../assets/jx-08-480.jpg" alt="JX-08">
                 <h4 class="sinte__nombre">JX-08</h4>
-                <p class="sinte_descripcion">Esta versión moderna mantiene el diseño original del JX-8P, pero hemos añadido una serie de actualizaciones que llevan la experiencia a otro nivel. Explora los más de 100 patches nuevos adaptados a los estilos contemporáneos. Los viejos sonidos retro! </p>
+                <p class="sinte_descripcion">Esta versión moderna mantiene el diseño original del JX-8P, pero hemos
+                    añadido una serie de actualizaciones que llevan la experiencia a otro nivel. Explora los más de 100
+                    patches nuevos adaptados a los estilos contemporáneos. Los viejos sonidos retro! </p>
             </div>
         </section>
         <section class="nuevos-sintes">
             <div class="sinte-item">
                 <img class="sinte__imagen" src="../assets/polibrute-480.jpg" alt="Polybrute">
                 <h4 class="sinte__nombre">Polybrute</h4>
-                <p class="sinte_descripcion">El PolyBrute es más que un sintetizador: es un monstruo analógico de 6 voces con una expresividad y unas capacidades de transformación del sonido sin precedentes. Está creado para que toques con plena seguridad, componer con fluidez y explorar!</p>
+                <p class="sinte_descripcion">El PolyBrute es más que un sintetizador: es un monstruo analógico de 6
+                    voces con una expresividad y unas capacidades de transformación del sonido sin precedentes. Está
+                    creado para que toques con plena seguridad, componer con fluidez y explorar!</p>
             </div>
-
             <div class="sinte-item">
                 <img class="sinte__imagen" src="../assets/tr-08-480.jpg" alt="TR-08">
                 <h4 class="sinte__nombre">TR-08</h4>
-                <p class="sinte_descripcion">La TR-08 es una réplica obsesivamente fiel y detallada de la legendaria TR-808, sin duda la caja de ritmos más famosa e influyente jamás creada. Después de provocar un giro monumental en el sonido de la música, la «808» ha seguido dando culto!</p>
+                <p class="sinte_descripcion">La TR-08 es una réplica obsesivamente fiel y detallada de la legendaria
+                    TR-808, sin duda la caja de ritmos más famosa e influyente jamás creada. Después de provocar un giro
+                    monumental en el sonido de la música, la «808» ha seguido dando culto!</p>
             </div>
-
             <div class="sinte-item">
                 <img class="sinte__imagen" src="../assets/wavestate-480.jpg" alt="Wavestate">
                 <h4 class="sinte__nombre">Wavestate mkII</h4>
-                <p class="sinte_descripcion">El legendario KORG Wavestation presentó al mundo las secuencias de ondas Wave Sequencing, transformando muestras en sonidos que nadie había oído antes. Los emblemáticos teclados OASYS y KRONOS desarrollaron Wave Sequencing aún más allá.</p>
+                <p class="sinte_descripcion">El legendario KORG Wavestation presentó al mundo las secuencias de ondas
+                    Wave Sequencing, transformando muestras en sonidos que nadie había oído antes. Los emblemáticos
+                    teclados OASYS y KRONOS desarrollaron Wave Sequencing aún más allá.</p>
             </div>
-
-
-
-
         </section>
-
-
     </main>
 
-
-<!-- FOOTER -->
-    <footer> 
+    <!-- FOOTER -->
+    <footer>
         <div class="pie-de-pagina">
             <div class="derechos">
                 <h4>Pagina diseñada por Sebas.</h4>
@@ -98,7 +97,6 @@
                 <a href="http://www.x.com" target="_blank">
                     <h4>X</h4>
                 </a>
-
             </div>
             <div class="enlaces">
                 <a href="http://www.arturia.com" target="_blank">
@@ -107,13 +105,9 @@
                 <a href="https://www.mercadolibre.com.ar/tienda/arturia#from=share_eshop" target="_blank">
                     <h4>Arturia oficial en mercado libre</h4>
                 </a>
-
             </div>
         </div>
     </footer>
-
-
-
 </body>
 
 </html>
