Traduccion de artistas

--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -36,11 +36,8 @@
                 <div class="artista-info">
                     <h4 class="artista__nombre">Maxime Audfray</h4>
                     <p class="artista__destaca">KiK</p>
-                    <p class="artista__texto">MiniFreak is my new favorite digital synth, it can be so versatile and can
-                        be used in every genre I can think of. The biggest plus compared to regular synth is the
-                        different engines, each with its own character and strength.</p>
-                    <p class="artista__texto">Maxime Audfray is a sound designer at Arturia for a few years now, and he
-                        likes to make noises with machines as a hobby.</p>
+                    <p class="artista__texto">MiniFreak es mi nuevo sintetizador digital favorito; es increíblemente versátil y se puede usar en prácticamente cualquier género que se me ocurra. La mayor ventaja respecto a los sintetizadores convencionales son sus diferentes motores, cada uno con su propio carácter y potencia.</p>
+                    <p class="artista__texto">Maxime Audfray es diseñador de sonido en Arturia desde hace algunos años y le gusta hacer ruidos con máquinas como pasatiempo.</p>
                 </div>
             </div>
             <div class="artiatas__item">
@@ -48,20 +45,8 @@
                 <div class="artista-info">
                     <h4 class="artista__nombre">Victor Morello</h4>
                     <p class="artista__destaca">Impale</p>
-                    <p class="artista__texto">During my initial research of the sound capabilities of the machine, I
-                        knew I wanted to try a couple of over-the-top bass sounds with generous (almost comical) amounts
-                        of distortion. Impale is one of them. The technique used is inspired by the sound of artists
-                        like Emptyset, Shapednoise and Mick Gordon. It involves using simple sounds at the beginning,
-                        followed by extensive processing chains involving several clever distortion stages. Then
-                        sometimes heavy dynamic processing is used again at the end. These intricate chains make any
-                        change of dynamics, any background noise added earlier in the chain have a drastic impact on the
-                        final sound. The ability to stack effects on MiniFreak (here, a Chorus followed by two
-                        Distortion effects at the end) allows to emulate this kind of chain to some extent..</p>
-                    <p class="artista__texto">I'm an electronic music producer, sound designer and computer enthusiast.
-                        I've worked for 5 years as an in-house sound designer for Arturia, working on both the sound and
-                        ergonomics of products like MatrixBrute, Pigments and PolyBrute. I now create experimental music
-                        as Zero Crossing Point, exploring strong emotions and abrasive textures. In my spare time, I
-                        also create video games and experiment with 3D graphics..</p>
+                    <p class="artista__texto">Durante mi investigación inicial sobre las capacidades sonoras de la máquina, sabía que quería probar un par de sonidos de bajo exagerados con cantidades generosas (casi cómicas) de distorsión. Impale es uno de ellos. La técnica utilizada está inspirada en el sonido de artistas como Emptyset, Shapednoise y Mick Gordon. Consiste en usar sonidos simples al principio, seguidos de extensas cadenas de procesamiento que incluyen varias etapas de distorsión ingeniosas. Luego, a veces se vuelve a usar un procesamiento dinámico intenso al final. Estas intrincadas cadenas hacen que cualquier cambio de dinámica, cualquier ruido de fondo añadido anteriormente en la cadena, tenga un impacto drástico en el sonido final. La capacidad de apilar efectos en MiniFreak (aquí, un Chorus seguido de dos efectos de Distorsión al final) permite emular este tipo de cadena hasta cierto punto.</p>
+                    <p class="artista__texto">Soy productor de música electrónica, diseñador de sonido y entusiasta de la informática. Trabajé durante 5 años como diseñador de sonido interno para Arturia, donde me encargué tanto del sonido como de la ergonomía de productos como MatrixBrute, Pigments y PolyBrute. Actualmente creo música experimental como Zero Crossing Point, explorando emociones intensas y texturas abrasivas. En mi tiempo libre, también creo videojuegos y experimento con gráficos 3D.</p>
                 </div>
             </div>
             <div class="artiatas__item">
@@ -69,14 +54,8 @@
                 <div class="artista-info">
                     <h4 class="artista__nombre">Yuli Yolo</h4>
                     <p class="artista__destaca">Seet</p>
-                    <p class="artista__texto">I always feel in love playing with tiny, organic percussive keys. I build
-                        a simple Fm keys sound with the Two OPFM algorithmic oscilliator. The sound can morph from an
-                        imaginary hammer hitting a tine to a kind of bell organ via the M1 & M2 macro. The 2 macros
-                        control the osc mix and the Fm ratio. The velocity is an important part of the sound modulation
-                        too, i like when my fingers are connected to a sound.</p>
-                    <p class="artista__texto">Yuli Yolo is a sound designer based in the South of France. A retired
-                        music composer, he now works as sound creator in the audio and video game industry. Focusing on
-                        his sound vision, he continues to explore the fusion between synthesis and expressivity..</p>
+                    <p class="artista__texto">Siempre me encanta tocar con pequeñas teclas percusivas orgánicas. Construyo un sonido sencillo de teclas Fm con el oscilador algorítmico Two OPFM. El sonido puede transformarse desde un martillo imaginario golpeando una púa hasta una especie de órgano de campanas mediante las macros M1 y M2. Las dos macros controlan la mezcla de osciladores y la relación de FM. La velocidad también es una parte importante de la modulación del sonido; me gusta cuando mis dedos están conectados al sonido.</p>
+                    <p class="artista__texto">Yuli Yolo es un diseñador de sonido afincado en el sur de Francia. Compositor musical retirado, ahora trabaja como creador de sonido en la industria del audio y los videojuegos. Centrado en su visión sonora, continúa explorando la fusión entre síntesis y expresividad.</p>
                 </div>
             </div>
             <div class="artiatas__item">
@@ -84,14 +63,8 @@
                 <div class="artista-info">
                     <h4 class="artista__nombre">Red Means Recording</h4>
                     <p class="artista__destaca">DFAME</p>
-                    <p class="artista__texto">I wanted to try and make a sequence that spoke to the Moog DFAM’s
-                        particular brand of analog percussion synthesis, and that was really playable with the macros,
-                        mod wheel, and front panel controls. I used the Noise Oscillator engine, which can be balanced
-                        between different flavors of noise while still retaining the body for a “kick”.</p>
-                    <p class="artista__texto">My name is Jeremy, and I am a musician, performer, and educator. I make
-                        music technology videos for the YouTube channel Red Means Recording. I write music under the
-                        pseudonym Jeremy Blake using literally anything I can get my hands on, including software,
-                        hardware, and modular.</p>
+                    <p class="artista__texto">Quería intentar crear una secuencia que reflejara el estilo particular de síntesis de percusión analógica del Moog DFAM, y que fuera realmente manejable con las macros, la rueda de modulación y los controles del panel frontal. Utilicé el motor Noise Oscillator, que permite equilibrar diferentes tipos de ruido manteniendo la presencia de un bombo.</p>
+                    <p class="artista__texto">Me llamo Jeremy y soy músico, intérprete y profesor. Hago vídeos sobre tecnología musical para el canal de YouTube Red Means Recording. Compongo música bajo el seudónimo de Jeremy Blake, utilizando prácticamente cualquier cosa que tenga a mano, incluyendo software, hardware y sintetizadores modulares.</p>
                 </div>
             </div>
             <!-- VIDEOS -->
