Se corrigen grillas, titulos de paginas y contactos

--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -52,7 +52,7 @@
     <!-- MAIN -->
     <main>
         <div class="titulo-seccion">
-            <h2>Artistas y productores que experimentan con Minifreak</h2>
+            <h1>Artistas y productores que experimentan con Minifreak</h1>
         </div>
         <section class="artistas">
             <div class="artiatas__item">
@@ -134,7 +134,7 @@
                     <p class="artista__texto">Descubre un sinfín de posibilidades sonoras y rompe con lo convencional
                         con un sintetizador híbrido adictivo que te invita a experimentar sin límites.</p>
                     <a class="artista__texto" href="https://www.instagram.com/xl.iks/" target="_blank">
-                        <h4>Más de xl.iks</h4>
+                        <h4 style="font-size: 80%;">Más de xl.iks</h4>
                     </a>
                 </div>
             </div>
