--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -25,13 +25,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/features.html">Características</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Artistas</a>
+                            <a class="nav-link active" aria-current="page" href="#">Artistas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/news.html">Otros sintes</a>
