--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/features.html">Características</a>
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="../pages/news.html">Otros sintes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link active" aria-current="page" href="#">Contacto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" aria-disabled="true">MiniFreak | Sintetizador hibrido
