--- a/pages/features.html
+++ b/pages/features.html
@@ -25,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Características</a>
+                            <a class="nav-link active" aria-current="page" href="#">Características</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/artistas.html">Artistas</a>
