--- a/pages/news.html
+++ b/pages/news.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/news.html">Características</a>
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="../pages/artistas.html">Artistas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Otros sintes</a>
+                            <a class="nav-link active" aria-current="page" href="#">Otros sintes</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/contacto.html">Contacto</a>
