--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -54,7 +54,7 @@
         <div class="titulo-seccion">
             <h1>Contactanos!</h1>
         </div>
-        <div class="contecto-contenedor">
+        <div class="contacto-contenedor">
             <div>
                 <form class="contacto-info"> <!--FORMULARIO DE CONTACTO-->
                     <div class="nom">
@@ -134,14 +134,16 @@
                 </form>
             </div>
         </div>
-    </main>
 
-    <div class="mensaje-contacto">
-        <h2 class="mensaje_1">Primero lo primero: Gracias por llegar hasta acá!</h2>
-        <h4 class="mensaje_2">Tu opinión es muy importante para nosotros!</h4>
-        <h5 class="mensaje_3">Cuéntanos como nos conociste y que esperas encontrar en este sitio.
-            Para ayudarnos a mejorar danos un puntaje en forma anónima.</h5>
-    </div>
+
+        <div class="mensaje-contacto">
+            <h2 class="mensaje_1">Primero lo primero: Gracias por llegar hasta acá!</h2>
+            <h4 class="mensaje_2">Tu opinión es muy importante para nosotros!</h4>
+            <h5 class="mensaje_3">Cuéntanos como nos conociste y que esperas encontrar en este sitio.
+                Para ayudarnos a mejorar danos un puntaje en forma anónima.</h5>
+        </div>
+
+    </main>
 
     <!-- FOOTER -->
     <footer>
@@ -173,7 +175,9 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
