RESPONSIVE header, footer, home, caracteristicas, artistas

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         mientras que sus funciones de aleatorización priorizan la creatividad y la diversión.</p>
                 </article>
                 <article class="intro-items">
-                    <h3>MiniFreak V (Software Complementario)</h3>
+                    <h3>MiniFreak V (SW Complementario)</h3>
                     <p>MiniFreak viene con un complemento VST dedicado, que permite a los usuarios integrar totalmente
                         su sonido híbrido único y sus presets en sus producciones DAW y viceversa. Utilizando motores de
                         sonido y arquitectura idénticos, ofrece una experiencia virtual del propio sintetizador sin
