RESPONSIVE resto de paginas menos contactos. Se corrigen tamaño de fuentes

--- a/index.html
+++ b/index.html
@@ -52,11 +52,23 @@
     <!-- MAIN -->
     <main>
         <div class="main-principal">
+
+            <div class="titulo-seccion">
+
+                <h1>Un Sintetizador Freak!</h1>
+
+            </div>
+
+
             <div class="imagen-minifreak">
                 <img class="main-imagen" src="./assets/minifreak-frontal-sm.png" alt="Minifreak frontal">
             </div>
             <section class="main-section"> <!-- INTRO -->
-                <h1>Un Sintetizador Freak!</h1>
+
+
+
+
+
                 <article class="intro-items">
                     <h3>De micro a Mini</h3>
                     <p>El MiniFreak lleva el audaz sintetizador híbrido a una nueva dimensión. Mantiene la arquitectura
