--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -52,7 +52,7 @@
     <!-- MAIN -->
     <main>
         <div class="titulo-seccion">
-            <h1>Artistas y productores que experimentan con Minifreak</h1>
+            <h1>Artistas que experimentan con Minifreak</h1>
         </div>
         <section class="artistas">
             <div class="artiatas__item">
@@ -78,7 +78,7 @@
                         (casi cómicas) de distorsión. Impale es uno de ellos. Consiste en usar sonidos simples al
                         principio, seguidos de extensas cadenas de procesamiento que incluyen varias etapas de
                         distorsión ingeniosas. La capacidad de apilar efectos en MiniFreak (aquí, un Chorus seguido de dos efectos de Distorsión
-                        al final) permite emular este tipo de cadena hasta cierto punto.</p>
+                        al final) permite emular este tipo de cadena.</p>
                     <p class="artista__texto">Soy productor de música electrónica, diseñador de sonido y entusiasta de
                         la informática. Trabajé durante 5 años como diseñador de sonido interno para Arturia, donde me
                         encargué tanto del sonido como de la ergonomía de productos como MatrixBrute, Pigments y
