--- a/pages/news.html
+++ b/pages/news.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/news.html">Características</a>
+                            <a class="nav-link" href="../pages/features.html">Características</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/artistas.html">Artistas</a>
@@ -52,9 +52,8 @@
 
     <!-- MAIN -->
     <main>
-
         <div class="titulo-seccion">
-            <h1>Sintetizadores y cajas de ritmo que complementan al Minifreak</h1>
+            <h1>Sintetizadores y cajas de ritmo</h1>
         </div>
         <section class="nuevos-sintes">
             <div class="sinte-item">
