--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,11 +58,11 @@
             <div>
                 <form class="contacto-info"> <!--FORMULARIO DE CONTACTO-->
                     <div class="nom">
-                        <label>Nombre y apellido:</label>
+                        <label>Nombre:</label>
                         <input type="text" placeholder="Nombre y apellido">
                     </div>
                     <div class="mai">
-                        <label>Correo electrónico:</label>
+                        <label>Correo:</label>
                         <input type="email">
                     </div>
                     <div class="cel">
