Se agrega degradado y animaciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -126,7 +126,7 @@
                     </ul>
                     <div class="btnop">
                         <div class="btnop__flex">
-                            <input type="submit" value="Enviar">
+                            <input type="submit" value="Enviar" class="botoncito">
                             <h5>Danos un puntaje anonimo!</h5>
                         </div>
                     </div>
