--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,10 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <!-- AMINACION https://animate.style/ -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="../style/style.css">
 </head>
@@ -87,7 +91,7 @@
             <div>
                 <form class="contacto-opinion">
 
-                    <h3 class="contacto__opinion__texto">Que te pareció la pagina?</h3>
+                    <h3 class="contacto__opinion__texto animate__animated animate__tada">Que te pareció la pagina?</h3>
                     <!--SELECCIÓN DE 1 AL 11 COMO  OPINION DE LA PAGINA-->
                     <ul class="contacto__opinion">
                         <li><label>1</label>
